# OpenGui

./: .gitignore  LICENSE  README.md  create_icon.ps1  dev.bat  get-openconnect.bat  run_build.ps1  run_release.ps1  run_tests.ps1  setup.bat
.github/workflows/: release.yml
.toolchain/openconnect/usr/share/vpnc-scripts/: vpnc-script-win.js
docs/: BRIDGE.md
src/: app.js  index.html
src-tauri/: Cargo.toml  build.rs  gen_icon.py  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  commands.rs  config.rs  credentials.rs  geoip.rs  killswitch.rs  lib.rs  logging.rs  main.rs  netshield.rs  netstats.rs  parser.rs  process.rs  settings.rs  types.rs  updater.rs
src-tauri/tests/: bridge_integration.rs
