[package]
name = "openconnect-gui"
version = "0.1.2"
edition = "2021"

[lib]
name = "openconnect_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-window-state = "2.2.0"
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-updater = "2.3.0"
tauri-plugin-process = "2.2.0"
windows-sys = { version = "0.61.0", features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_Security",
    "Win32_System_Threading",
] }
totp-rs = "5.6.0"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "process", "sync", "time", "macros"] }
thiserror = "2.0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
zeroize = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
